--- a/index.html
+++ b/index.html
@@ -13,16 +13,41 @@
     <title>Form Validation</title>
   </head>
   <body>
-    <!--form header
-login
-input1
-input2
-input type submit
--->
+    <div class="container">
+      <form action="/action_page.php">
+        <div class="form-group">
+          <div class="error"></div>
+          <label for="email">Email address:</label>
+          <!-- onchange="updateEmailArray()"-->
 
-    <form>
-      <input />
-    </form>
+          <input
+            type="email"
+            class="form-control"
+            placeholder="Enter email"
+            id="email"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <label for="pwd">Password:</label>
+          <!-- onchange="updatePassArray()" -->
+
+          <input
+            type="password"
+            class="form-control"
+            placeholder="Enter password"
+            id="pwd"
+            required
+          />
+        </div>
+        <div class="form-group form-check">
+          <label class="form-check-label">
+            <input class="form-check-input" type="checkbox" /> Remember me
+          </label>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+    </div>
 
     <!-- JS, Popper.js, and jQuery -->
     <script
